--- a/src/components/Summary/index.module.css
+++ b/src/components/Summary/index.module.css
@@ -1,7 +1,11 @@
-.header {
-  text-align: center;
+.wrapper {
+  display: block;
+  margin: 1rem 15px;
+}
+
+.title {
   margin-top: 2rem;
-  margin-bottom: 3rem;
+  text-align: center;
 }
 
 @media (min-width: 375px) { 
@@ -9,9 +13,10 @@
     display: block;
   }
 
-  .card {
-    width: 80%;
-    margin: 0 auto;
+  .item {
+    width: 100%;
+    text-align: center;
+    margin-bottom: 1rem;
   }
  }
 
@@ -20,8 +25,8 @@
     display: flex;
     justify-content: space-between;
   }
-
-  .card {
+  
+  .item {
     width: 45%;
   }
 }
